--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language:python
 sudo:required
 
+branches:
+  only:
+  - master
+  - release
+
 install:
   - sudo apt-get install python=3.7
-  - pip install -r ./requirements.txt
+  - pip install -r ../requirements.txt
   - sudo apt-get install nodejs
   - cd wxapp && npm install
 
