--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
-language:python
-sudo:required
+language: python
+sudo: required
 
-branches:
-  only:
-  - master
-  - release
+python:
+  - "3.7"
+node_js:
+  - "10"
 
 install:
-  - sudo apt-get install python=3.7
-  - pip install -r ../requirements.txt
-  - sudo apt-get install nodejs
+  - pip install -r webapp/requirements.txt
   - cd wxapp && npm install
 
 script:
