--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 
 install:
   - sudo apt-get install python=3.7
-  - pip install -r ../requirements.txt
+  - pip install -r webapp/requirements.txt
   - sudo apt-get install nodejs
   - cd wxapp && npm install
 
