--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language:python
 sudo:required
 
-branches:
-  only:
-  - master
-  - release
+python:
+  - "3.7"
+nodejs:
+  - "10"
 
 install:
   - sudo apt-get install python=3.7
