--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,24 @@ sudo: required
 
 branches:
   only:
-  - master
-  - release
+    - master
+    - release
+    - wx
 
 python:
   - "3.7"
-node_js:
-  - "10"
 
-install:
-  - pip install -r webapp/requirements.txt
-  - cd wxapp && npm install
+jobs:
+  include:
+    - language: node_js
+      node_js: "10"
+      install:
+        - cd wxapp && npm install
+      script:
+        - npm test
+    - install:
+        - pip install -r webapp/requirements.txt
+      script:
+        - cd webapp && python manage.py test
 
-script:
-  - cd webapp && python manage.py test
-  - cd wxapp && npm test
 
