--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ jobs:
     - python webapp/backend/manage.py test
 before_install:
 - openssl aes-256-cbc -K $encrypted_fc68b59f2946_key -iv $encrypted_fc68b59f2946_iv
-  -in id_rsa_deploy.enc -out ~\/.ssh/id_rsa_deploy -d
-- chmod 600 ~/.ssh/id_rsa_deploy
+  -in id_rsa_deploy.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
 
 addons:
   ssh_known_hosts: "$IP"
