--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -1,13 +1,20 @@
 alembic==1.3.1
 autopep8==1.4.4
+bcrypt==3.1.7
+blinker==1.4
 certifi==2019.9.11
+cffi==1.13.2
 Click==7.0
+cryptography==2.8
 Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-User==1.0.2.0
+Flask-WTF==0.14.2
 ForgeryPy3==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
@@ -17,8 +24,10 @@ mysql==0.0.2
 mysql-connector==2.2.9
 mysql-connector-python==8.0.18
 mysqlclient==1.4.6
+passlib==1.7.2
 protobuf==3.10.0
 pycodestyle==2.5.0
+pycparser==2.19
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.13.0
