--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -6,8 +6,10 @@ certifi==2019.9.11
 cffi==1.13.2
 Click==7.0
 cryptography==2.8
+dominate==2.4.0
 Flask==1.1.1
 Flask-Admin==1.5.4
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
@@ -28,10 +30,12 @@ passlib==1.7.2
 protobuf==3.10.0
 pycodestyle==2.5.0
 pycparser==2.19
+pycryptodome==3.9.4
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.13.0
 SQLAlchemy==1.3.11
+visitor==0.1.3
 Werkzeug==0.16.0
 wincertstore==0.2
 WTForms==2.2.1
