--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -4,6 +4,7 @@ bcrypt==3.1.7
 blinker==1.4
 certifi==2019.9.11
 cffi==1.13.2
+chardet==3.0.4
 Click==7.0
 cryptography==2.8
 dominate==2.4.0
@@ -18,6 +19,7 @@ Flask-SQLAlchemy==2.4.1
 Flask-User==0.6.21
 Flask-WTF==0.14.2
 ForgeryPy3==0.3.1
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
@@ -33,8 +35,10 @@ pycparser==2.19
 pycryptodome==3.9.4
 python-dateutil==2.8.1
 python-editor==1.0.4
+requests==2.22.0
 six==1.13.0
 SQLAlchemy==1.3.11
+urllib3==1.25.7
 visitor==0.1.3
 Werkzeug==0.16.0
 wincertstore==0.2
