--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -15,6 +15,7 @@ Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
+Flask-Session==0.3.1
 Flask-SQLAlchemy==2.4.1
 Flask-User==0.6.21
 Flask-WTF==0.14.2
@@ -35,6 +36,7 @@ pycparser==2.19
 pycryptodome==3.9.4
 python-dateutil==2.8.1
 python-editor==1.0.4
+redis==3.3.11
 requests==2.22.0
 six==1.13.0
 SQLAlchemy==1.3.11
