--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3'
 services:
+  redis:
+    image: redis
+    restart: always
   mysql:
     image: mysql
     environment:
@@ -15,6 +18,7 @@ services:
       - "1080:80"
     links:
       - mysql
+      - redis
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./backend:/backend
