--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     links:
       - mysql
       - redis
+    depends_on: 
+      - mysql
+      - redis
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./backend:/backend
