--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -6,6 +6,7 @@ certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
 Click==7.0
+coverage==5.0
 cryptography==2.8
 dominate==2.4.0
 Flask==1.1.1
@@ -38,6 +39,7 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 redis==3.3.11
 requests==2.22.0
+selenium==3.141.0
 six==1.13.0
 SQLAlchemy==1.3.11
 urllib3==1.25.7
