--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - mysql
 
 before_script:
-  - echo "USE mysql;\nUPDATE user SET password=PASSWORD('Waqing121!') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+  - echo "USE mysql;\nALTER USER 'root'@'localhost'IDENTIFIED BY "Waqing121!";\nFLUSH PRIVILEGES;\n" | mysql -u root
 
 sudo: required
 branches:
