--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ branches:
 python:
 - '3.7'
 
+before_script:
+  - echo "USE mysql;\nupdate mysql.user set authentication_string=password('Waqing121!') where user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+
 env:
   - FLASK_CONFIG=travis
 
