--- a/webapp/makefile
+++ b/webapp/makefile
@@ -4,6 +4,9 @@ runserver:
 test:
 	python backend/manage.py test
 
+init_db:
+	python backend/manage.py init_db
+
 init:
 	python backend/manage.py db init
 
