--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -1,16 +1,19 @@
 alembic==1.3.1
 autopep8==1.4.4
+Babel==2.7.0
 bcrypt==3.1.7
 blinker==1.4
 certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
 Click==7.0
+codecov==2.0.15
 coverage==5.0
 cryptography==2.8
 dominate==2.4.0
 Flask==1.1.1
 Flask-Admin==1.5.4
+Flask-BabelEx==0.9.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
@@ -37,10 +40,12 @@ pycparser==2.19
 pycryptodome==3.9.4
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2019.3
 redis==3.3.11
 requests==2.22.0
 selenium==3.141.0
 six==1.13.0
+speaklater==1.3
 SQLAlchemy==1.3.11
 urllib3==1.25.7
 visitor==0.1.3
