--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ python:
 - '3.7'
 
 before_script:
-  - echo "USE mysql;\nupdate mysql.user set authentication_string=password('Waqing121!') where user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+  - echo "USE mysql;\nupdate mysql.user set authentication_string=password('your password') where user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
 
 jobs:
   include:
@@ -38,4 +38,4 @@ addons:
   ssh_known_hosts: 62.234.7.17
 
 after_success:
-- ssh ubuntu@$IP 'cd volunteers-tsinghua && git checkout release && git pull && cd webapp && sudo docker-compose restart'
+- ssh yourusername@$IP 'cd volunteers-tsinghua && git checkout release && git pull && cd webapp && sudo docker-compose restart'
